# gpr200-fa2023-willow-ohara

./: CMakeLists.txt
assignments/FinalProject/: CMakeLists.txt  main.cpp
assignments/FinalProject/assets/: defaultLit.frag  defaultLit.vert  hairRender.frag  hairRender.vert
assignments/assignment1_helloTriangle/: main.cpp
assignments/assignment2_sunset/: main.cpp
assignments/assignment2_sunset/assets/: fragmentShader.frag  vertexShader.vert
assignments/assignment3_textures/: main.cpp
assignments/assignment3_textures/assets/: background.frag  character.frag  character.vert  fragmentShader.frag
assignments/assignment4_transformations/: main.cpp
assignments/assignment4_transformations/assets/: vertexShader.vert
assignments/assignment5_camera/: main.cpp
assignments/assignment5_camera/assets/: vertexShader.vert
assignments/assignment6_proceduralGeometry/: main.cpp
assignments/assignment7_lighting/: main.cpp
assignments/assignment7_lighting/assets/: defaultLit.frag  unlit.vert
core/: CMakeLists.txt
core/celLib/: model.cpp  model.h
core/ew/: shader.cpp  shader.h
core/willowLib/: camera.cpp  camera.h  procGen.cpp  procGen.h  shader.cpp  shader.h  texture.cpp  texture.h  transformations.h
